--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
 } */
 
 body {
-    background-image: url("concrete-texture.png");
+    background-image: url("../images/concrete-texture.png");
 }
 
 .container-fluid {
@@ -107,20 +107,20 @@ h1 {
     padding-bottom: 40px;
     margin-bottom: 20px;
 }
-img {
+/* img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 40%;
 
-}
+} */
 
 ul {
     list-style-type: none;
 }
 h2 {
-    font-size: 1.3em;
     padding-bottom: 25px;
+    font-size: 20px;
 }
 
 header {
@@ -196,22 +196,24 @@ header {
     max-width: 100%;
 }
 
-/* The following styles are specific to the portfolio page */
-/* .icon {
+.image-wrapper {
     position: relative;
-    margin: 5px 5px 5px 5px;
-    cursor: pointer;
-    transition: all .8s ease;
-} */
-/* Make thumbnail larger when hovered. */
-/* .icon:hover {
-    transform: scale(1.3);
-} */
+    width: 250px;
+    float: left;
+}
 
-/* .icon img { */
-    /* max-width: 270px; */
-    /* max-width: 100%;
-} */
+.image-wrapper p {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: 1px solid #FFF;
+    width: 250px;
+    color: #FFF;
+    background-color: #4aaaa5;
+    text-align: center;
+}
 
 .left {
     float: left;
@@ -261,12 +263,12 @@ input {
     padding: 8px 16px 8px 16px;
     cursor: pointer;
 }
-/* The following styles are for the sidebar on the right that is on all pages. */
+
 #sideBar {
     background-color: white;
     float: right;
     margin-bottom: 50px;
-    width: 175px;
+    width: 155px;
     margin-right: 10%;
     margin-top: 20px;
 }
@@ -349,12 +351,59 @@ footer {
 /* Content displayed in the main box to the left of the screen. */
 #mainContent {
     width: 100%;
-    padding: 40px 30px 40px 30px;
     margin-bottom: 50px;
     background-color: white;
     float: left;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     margin-top: 20px;
+    width: 650px;
+    margin-left: 20%;
 }
+
+.icon {
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 15%;
+    background-color: #4aaaa5;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=message], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    height: 150px;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+
 
